--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy==1.21.5
-pandas==1.3.5
-requests==2.26.0
-sodapy==2.1.0
-streamlit==1.3.1
-plotly==5.5.0
 altair==4.2.0
-scikit-learn==1.0.2
-scipy==1.7.3
+beautifulsoup4==4.10.0
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
+numpy==1.21.5
+pandas==1.3.5
+plotly==5.5.0
+requests==2.26.0
+scikit-learn==1.0.2
+scipy==1.7.3
+streamlit==1.3.1
