--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+json5==0.9.6
+jsonschema==4.4.0
+simplejson==3.17.6
 altair==4.2.0
 beautifulsoup4==4.10.0
 matplotlib==3.5.1
@@ -9,3 +12,4 @@ requests==2.26.0
 scikit-learn==1.0.2
 scipy==1.7.3
 streamlit==1.3.1
+
